# PDF-to-DOC

./: .gitignore  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt
pdf_to_doc/: __init__.py  cli.py  converter.py  dl_cli.py  hf_cli.py  hf_replace.py  lo_cli.py  lo_converter.py  odt_cli.py  odt_hf.py  odt_hf_cli.py  odt_pdf_cli.py  odt_remove.py  odt_remove_cli.py  odt_to_docx.py  odt_to_pdf.py  pdf_downloader.py
scripts/: smoke_test.py
tests/: test_converter.py
